fix z-index for slider

--- a/p/themes/base-theme/frss.css
+++ b/p/themes/base-theme/frss.css
@@ -1862,7 +1862,7 @@ html.slider-active {
 	top: 0; bottom: 0;
 	right: 0;
 	overflow: auto;
-	z-index: 90;
+	z-index: 91;
 }
 
 #slider.active:target {
